# horizon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
res/shaders/: fragment.shader.glsl  vertex.shader.glsl
src/: env.h  io.cpp  io.h  io.hpp  main.cpp
src/cli/: cli.cpp  cli.h  cli.hpp  strman.cpp  strman.h  strman.hpp
src/gfx/: core.h  shaders.cpp  shaders.h
src/map/: map.cpp  map.h
