cmake_minimum_required(VERSION 3.0.0)
project(Horizon VERSION 0.1.0)

set(ARCHIVE_DIRECTORY libs)
set(PDB_DIRECTORY pdbs)
set(LIBRARY_DIRECTORY ${PROJECT_NAME})
set(RUNTIME_DIRECTORY ${PROJECT_NAME})

set(CMAKE_PDB_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/pdbs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME})

foreach( OUTCONF ${CMAKE_CONFIGURATION_TYPES} )
	string( TOUPPER ${OUTCONF} UPOUTCONF )

	set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${UPOUTCONF} ${CMAKE_BINARY_DIR}/${OUTCONF}/${ARCHIVE_DIRECTORY} )
	link_directories(${CMAKE_BINARY_DIR}/${OUTCONF}/${ARCHIVE_DIRECTORY})

	set( CMAKE_PDB_OUTPUT_DIRECTORY_${UPOUTCONF} ${CMAKE_BINARY_DIR}/${OUTCONF}/${PDB_DIRECTORY} )

	set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${UPOUTCONF} ${CMAKE_BINARY_DIR}/${OUTCONF}/${LIBRARY_DIRECTORY} )
	set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${UPOUTCONF} ${CMAKE_BINARY_DIR}/${OUTCONF}/${RUNTIME_DIRECTORY} )
endforeach( OUTCONF )

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

include_directories(src)

add_executable(Horizon
	src/main.cpp
	src/cli/strman.cpp
	src/cli/cli.cpp
)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
